--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },  
+  "packageManager": "pnpm@9.0.0"
   }
-}
+
